This documents significant changes in the dev branch of ksh 93u+m.
For full details, see the git log at: https://github.com/ksh93/ksh
Uppercase BUG_* IDs are shell bug IDs as used by the Modernish shell library.

2025-04-10:

- Fixed a bug (present in all AT&T and 93u+m releases) affecting parsing of
  glob patterns and regular expressions, which caused the following to fail:
    str=aaaa && echo "${str%%aaa}"  # now correctly outputs 'a'
    [[ aaaa =~ aaa$ ]]; echo $?	    # now correctly outputs 0 (true/success)
  and similar, more complicated corner cases involving strings of identical
  characters with a length difference of one.

2025-04-07:

- Fixed a bug where pasting over 80 bytes of multibyte characters into the
  command line over ssh resulted in corrupted input. This problem was caused
  by multibyte characters being split when the typeahead buffer is full.

2025-03-30:

- Fixed: 'stty -echo' failed to turn off echoing of terminal input in
  scripts for subsequent 'read' commands. Bug introduced on 2021-02-11.

- Fixed an issue where any DEBUG trap defined in .kshrc (or other $ENV script)
  was unexpectedly executed for internal 'tput' commands that ksh invokes at
  init (to obtain terminal escape sequences for multiline editing).

2025-03-28:

- Fixed crash upon resizing the terminal window after 'stty -echo', including
  when invoking ksh as a child shell in an editor such as emacs (M-x shell).

- The ESC . and ESC _ commands in emacs/gmacs and the _ command in vi, which
  insert the last word of the last command, now:
  - recognise not only spaces but also the following shell grammar
    characters as word boundaries: |&;()`<>
  - correctly recognise a word that is quoted with the $'...' syntax,
    even when it includes a backslash-escaped single quote.

- [v1.1] The 'cd' command no longer adds brackets to system error messages.

2025-03-24:

- Fixed a crash that occurred in specific circumstances when processing a