@@ -36,7 +36,7 @@ make install virtual
 		exec -		echo "# current git commit: $git_commit" >&2  # for the log
 		exec -		;;
 		exec -	*)
-		exec -		echo "/* generated by libast/Mamfile (we're not in a git repo) */"
+		exec -		echo "/* generated by ksh93/Mamfile (we're not in a git repo) */"
 		exec -		echo "#undef git_commit"
 		exec -		;;
 		exec -	esac > git.h.new
@@ -79,13 +79,6 @@ make install virtual
 	make FEATURE/time
 		make features/time
 			prev %{INCLUDE_AST}/times.h
-		done
-		exec - %{iffe_run} %{<}
-	done
-
-	make FEATURE/dynamic
-		make features/dynamic
-			prev %{INCLUDE_AST}/dlldefs.h
 		done
 		exec - %{iffe_run} %{<}
 	done
@@ -218,7 +211,6 @@ make install virtual
 
 	make include/builtins.h
 		prev include/shtable.h
-		prev FEATURE/dynamic
 		prev %{INCLUDE_AST}/option.h
 	done
 
@@ -249,7 +241,6 @@ make install virtual
 	done
 
 	make include/variables.h
-		prev FEATURE/dynamic
 		prev %{INCLUDE_AST}/option.h
 		prev include/nval.h
 	done
@@ -344,7 +335,7 @@ make install virtual
 
 	note *
 	note * libshell C source (*.c) dependencies
-	note * (except strdata.c -- see further below)
+	note * (except strdata.c and the *.c that check for SHOPT_DYNAMIC -- see further below)
 	note *
 
 	make c_sources virtual
@@ -490,18 +481,6 @@ make install virtual
 			prev include/io.h
 			prev %{INCLUDE_AST}/regex.h
 			prev %{INCLUDE_AST}/ls.h
-			prev %{INCLUDE_AST}/error.h
-			prev include/defs.h
-			prev shopt.h
-		done
-
-		make bltins/typeset.c
-			prev FEATURE/dynamic
-			prev include/variables.h
-			prev include/builtins.h
-			prev include/history.h
-			prev include/name.h
-			prev include/path.h
 			prev %{INCLUDE_AST}/error.h
 			prev include/defs.h
 			prev shopt.h
@@ -696,7 +675,6 @@ make install virtual
 			prev include/version.h
 			prev include/lexstates.h
 			prev FEATURE/externs
-			prev FEATURE/dynamic
 			prev FEATURE/time
 			prev include/builtins.h
 			prev include/shlex.h
@@ -717,7 +695,6 @@ make install virtual
 		make sh/io.c
 			prev %{INCLUDE_AST}/endian.h
 			prev FEATURE/poll
-			prev FEATURE/dynamic
 			prev FEATURE/externs
 			prev include/timeout.h
 			prev include/edit.h
@@ -807,23 +784,6 @@ make install virtual
 			prev include/shell.h
 			prev include/defs.h
 			prev include/version.h
-			prev shopt.h
-		done
-
-		make sh/path.c
-			prev FEATURE/time
-			prev %{INCLUDE_AST}/endian.h
-			prev FEATURE/dynamic
-			prev include/test.h
-			prev include/history.h
-			prev include/jobs.h
-			prev include/io.h
-			prev include/path.h
-			prev include/variables.h
-			prev include/nval.h
-			prev %{INCLUDE_AST}/ls.h
-			prev include/fcin.h
-			prev include/defs.h
 			prev shopt.h
 		done
 
@@ -955,20 +915,6 @@ make install virtual
 		done
 
 		make data/aliases.c
-			prev FEATURE/dynamic
-			prev include/defs.h
-			prev shopt.h
-		done
-
-		make data/builtins.c
-			prev FEATURE/poll
-			prev FEATURE/cmds
-			prev include/jobs.h
-			prev include/builtins.h
-			prev include/version.h
-			prev include/name.h
-			prev include/ulimit.h
-			prev include/shtable.h
 			prev include/defs.h
 			prev shopt.h
 		done
@@ -980,7 +926,6 @@ make install virtual
 			prev include/name.h
 			prev include/shtable.h
 			prev include/shell.h
-			prev FEATURE/dynamic
 			prev %{INCLUDE_AST}/ast.h
 			prev shopt.h
 		done
@@ -1024,10 +969,73 @@ make install virtual
 	done c_sources
 
 	note *
+	note * All C source files that include preprocessor checks
+	note * for SHOPT_DYMAMIC must go in the virtual rule below.
+	note *
+
+	make c_sources_shopt_dynamic virtual
+		make bltins/typeset.c
+			prev %{INCLUDE_AST}/dlldefs.h
+			prev include/variables.h
+			prev include/builtins.h
+			prev include/history.h
+			prev include/name.h
+			prev include/path.h
+			prev %{INCLUDE_AST}/error.h
+			prev include/defs.h
+			prev shopt.h
+		done
+
+		make sh/path.c
+			prev FEATURE/time
+			prev %{INCLUDE_AST}/endian.h
+			prev %{INCLUDE_AST}/dlldefs.h
+			prev include/test.h
+			prev include/history.h
+			prev include/jobs.h
+			prev include/io.h
+			prev include/path.h
+			prev include/variables.h
+			prev include/nval.h
+			prev %{INCLUDE_AST}/ls.h
+			prev include/fcin.h
+			prev include/defs.h
+			prev shopt.h
+		done
+
+		make data/builtins.c
+			prev FEATURE/poll
+			prev FEATURE/cmds
+			prev include/jobs.h
+			prev include/builtins.h
+			prev include/version.h
+			prev include/name.h
+			prev include/ulimit.h
+			prev include/shtable.h
+			prev include/defs.h
+			prev shopt.h
+		done
+
+		setv _libshell_c_sources_dyn_ %{^}
+	done c_sources_shopt_dynamic
+
+	note *
 	note * Set common compiler invocation arguments
 	note *
 
 	setv compile %{CC} %{mam_cc_FLAGS} %{CCFLAGS} %{mam_cc_NOSTRICTALIASING} %{DEBUG+-DDEBUG=%{DEBUG}} -DSH_DICT=%{SH_DICT} %{SH_CMDLIB_DIR+-DSH_CMDLIB_DIR=%{SH_CMDLIB_DIR}} -I. -Iinclude -I%{INCLUDE_AST} -D_API_ast=20100309 -DERROR_CONTEXT_T=Error_context_t -c
+
+	note *
+	note * Build *_dyn.o object files for dynamic library
+	note *
+
+	loop SRC %{_libshell_c_sources_dyn_}
+		make %{SRC@basename -- "$1" .c}_dyn.o dontcare
+			prev %{SRC}
+			exec - if dylink -Q; then %{compile} -DSHOPT_DYNAMIC=1 -o %{@} %{<}; fi
+		done
+	done
+	setv _libshell_dyn_obj_files_ %{_libshell_c_sources_dyn_|sed 's>.*/>>; s>\.c$>_dyn.o>'}
 
 	note *
 	note * Build the library
@@ -1038,6 +1046,16 @@ make install virtual
 			make %{SRC@basename -- "$1" .c}.o
 				prev %{SRC}
 				exec - %{compile} %{<}
+			done
+		done
+
+		note * save for dylink
+		setv _libshell_object_files_ %{^} strdata.o
+
+		loop SRC %{_libshell_c_sources_dyn_}
+			make %{SRC@basename -- "$1" .c}.o
+				prev %{SRC}
+				exec - %{compile} -DSHOPT_DYNAMIC=0 %{<}
 			done
 		done
 
@@ -1055,9 +1073,6 @@ make install virtual
 
 		note * include shell action for linking the library
 		incl link_ar.mam
-
-		note * save for dylink
-		setv _libshell_object_files_ %{^}
 	done libshell.a
 
 	note *
@@ -1128,10 +1143,12 @@ make install virtual
 	setv dyn_libshell %{INSTALLROOT}/dyn/lib/%{DYLIB_PRE}shell%{DYLIB_SUF}
 
 	make %{dyn_libshell} dontcare
-		prev libshell.a
 		prev shell.req
+		loop OBJ %{_libshell_object_files_} %{_libshell_dyn_obj_files_}
+			prev %{OBJ}
+		done
 		exec - export LDFLAGS='%{LDFLAGS} %{CCLDFLAGS} %{mam_cc_LD_NOASNEEDED}'
-		exec - dylink -m shell -v %{DYLIB_VERSION} -p '%{DYLIB_PRE}' -s '%{DYLIB_SUF}' $(sed 1d shell.req) %{_libshell_object_files_}
+		exec - dylink -m shell -v %{DYLIB_VERSION} -p '%{DYLIB_PRE}' -s '%{DYLIB_SUF}' $(sed 1d shell.req) %{_libshell_object_files_} %{_libshell_dyn_obj_files_}
 	done
 
 	make %{INSTALLROOT}/dyn/bin/ksh dontcare
