@@ -2,7 +2,7 @@
 *                                                                      *
 *               This software is part of the ast package               *
 *          Copyright (c) 1982-2012 AT&T Intellectual Property          *
-*          Copyright (c) 2020-2024 Contributors to ksh 93u+m           *
+*          Copyright (c) 2020-2025 Contributors to ksh 93u+m           *
 *                      and is licensed under the                       *
 *                 Eclipse Public License, Version 2.0                  *
 *                                                                      *
@@ -19,7 +19,6 @@
 
 #include	"shopt.h"
 #include	<ast.h>
-#include	"FEATURE/dynamic"
 #include	<shell.h>
 #include	"shtable.h"
 #include	"name.h"
