@@ -1,5 +1,0 @@
-cat{
-	#if SHOPT_DYNAMIC
-	#include	<dlldefs.h>
-	#endif
-}end
