@@ -20,7 +20,6 @@
 #ifndef SH_VALNOD
 
 #include        <option.h>
-#include        "FEATURE/dynamic"
 #include	<nval.h>
 
 /* used for RANDNOD ($RANDOM) */
